--- a/demo-brower/html/index.html
+++ b/demo-brower/html/index.html
@@ -14,7 +14,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>兼容性</title>
 		<!--External css-->
-		  <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+		  <link href="../lib/bootstrap.min.css" rel="stylesheet">
 		  <link rel="stylesheet" href="../css/browers.css" />
 		<!--External css-->
 		 
@@ -304,10 +304,10 @@ label,summary{
 		<!--content-->
 		<!--External JS-->
 		  <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-		  <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+		  <script src="../lib/jquery.min.js"></script>
 
 		  <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-		  <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		  <script src="../lib/bootstrap.min.js"></script>
 		<!--External JS-->
 	</body>
 </html>
