--- a/Demos/chuye/chuye-demo.html
+++ b/Demos/chuye/chuye-demo.html
@@ -39,12 +39,12 @@
                 <div class="page-body">
                     <div class="page-content clearfix">
                         <div class="section section-text text-l animated-text">
-                            <p class="p-title shake animated">初页，是一种生活态度！</p>
-                            <p class="p-text fadeInDown animated">随手一组照片，用音乐串起来，用文字记录......</p>
-                            <p class="p-text fadeInDown animated">你的生活原来可以感动你自己！</p>
-                            <p class="p-text fadeInDown animated">这就是初夜，</p>
-                            <p class="p-text fadeInDown animated">一个用音乐照片记录情感故事的表达工具。</p>
-                            <div class="p-text qr-img fadeInDown animated">
+                            <p class="p-title">初页，是一种生活态度！</p>
+                            <p class="p-text">随手一组照片，用音乐串起来，用文字记录......</p>
+                            <p class="p-text">你的生活原来可以感动你自己！</p>
+                            <p class="p-text">这就是初夜，</p>
+                            <p class="p-text">一个用音乐照片记录情感故事的表达工具。</p>
+                            <div class="p-text qr-img">
                                 <div class="qr-mask">
                                     <a class="app app-Android" href=""><img src="./img/android-icon.png" alt="android" /></a>
                                     <a class="app app-IOS" href=""><img src="./img/ios-icon.png" alt="ios" /></a>
@@ -151,7 +151,6 @@
                     <div class="copy-right">Copyright © 2016. 北京七厘米科技有限公司</div>
                 </footer>
                 <!-- footer -->
-
             </section>
             <!-- 4-->
         </div>
